--- a/.github/workflows/texlive.yml
+++ b/.github/workflows/texlive.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tex-version: [2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011]
+        # tex-version: [2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011]
+        tex-version: [2022, 2021, 2020]
     name: TeXLive ${{ matrix.tex-version }}
     steps:
       - name: "Checkout GitHub Action"
@@ -33,5 +34,9 @@ jobs:
           file: ./texlive/Dockerfile
           push: true
           tags: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.tex-version }}
-          args: |
-            --build-arg TexLiveVersion=${{ matrix.tex-version }}
+        #   参数
+          build-args: |
+            TEXLIVE_Version=${{ matrix.tex-version }}
+            TEXLIVE_MIRROR=https://ftp.math.utah.edu/pub/tex/historic/systems/texlive/${{ matrix.tex-version }}/tlnet-final
+
+
