--- a/.github/workflows/texlive.yml
+++ b/.github/workflows/texlive.yml
@@ -8,19 +8,15 @@ env:
   IMAGE_NAME: ayaka-notes/overleaf/texlive
 
 jobs:
-  build-image:
+  build-latest:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        # tex-version: [2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011]
-        tex-version: [2022, 2021, 2020]
-    name: TeXLive ${{ matrix.tex-version }}
+    name: TeXLive latest
     steps:
       - name: "Checkout GitHub Action"
         uses: actions/checkout@main
 
       - name: "Login to GitHub Container Registry"
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3.0.0
         with:
           registry: ${{env.DOCKER_REGISTRY}}
           username: ${{github.actor}}
@@ -28,15 +24,40 @@ jobs:
 
       - name: Build and push Docker image
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5.1.0
+        with:
+          context: ./texlive
+          file: ./texlive/Dockerfile.latest
+          push: true
+          tags: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest,${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:2023
+
+  build-image:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # tex-version: [2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011]
+        tex-version: [2019, 2018, 2017]
+    name: TeXLive ${{ matrix.tex-version }}
+    steps:
+      - name: "Checkout GitHub Action"
+        uses: actions/checkout@main
+
+      - name: "Login to GitHub Container Registry"
+        uses: docker/login-action@v3.0.0
+        with:
+          registry: ${{env.DOCKER_REGISTRY}}
+          username: ${{github.actor}}
+          password: ${{secrets.GITHUB_TOKEN}}
+
+      - name: Build and push Docker image
+        id: docker_build
+        uses: docker/build-push-action@v5.1.0
         with:
           context: ./texlive
           file: ./texlive/Dockerfile
           push: true
           tags: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.tex-version }}
-        #   参数
+          #   参数
           build-args: |
             TEXLIVE_Version=${{ matrix.tex-version }}
             TEXLIVE_MIRROR=https://ftp.math.utah.edu/pub/tex/historic/systems/texlive/${{ matrix.tex-version }}/tlnet-final
-
-
