Add choice type for tex-version-end

--- a/.github/workflows/texlive.yml
+++ b/.github/workflows/texlive.yml
@@ -37,6 +37,7 @@ on:
       tex-version-end:
         description: "Build End version"
         required: true
+        type: choice
         options:
           - 2022
           - 2021
