--- a/.github/workflows/texlive.yml
+++ b/.github/workflows/texlive.yml
@@ -95,7 +95,7 @@ jobs:
         if: github.event.inputs.tex-version-start <= matrix.tex-version && github.event.inputs.tex-version-end >= matrix.tex-version
 
       - name: "Login to GitHub Container Registry"
-        depends-on: checkout
+        if: steps.checkout.outcome == 'success'
         id: docker_login
         uses: docker/login-action@v3.0.0
         with:
@@ -105,6 +105,7 @@ jobs:
 
       - name: Build and push Docker image
         depends-on: docker_login
+        if: steps.docker_login.outcome == 'success'
         id: docker_build
         uses: docker/build-push-action@v5.1.0
         with:
