--- a/.github/workflows/texlive.yml
+++ b/.github/workflows/texlive.yml
@@ -86,7 +86,7 @@ jobs:
     strategy:
       matrix:
         tex-version: [2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011]
-    if: github.event.inputs.build-image == 'true' && github.event.inputs.tex-version-start <= matrix.tex-version && github.event.inputs.tex-version-end >= matrix.tex-version
+    if: github.event.inputs.build-image == 'true' && github.event.inputs.tex-version-start <= strategy.matrix.tex-version && github.event.inputs.tex-version-end >= strategy.matrix.tex-version
     name: TeXLive ${{ matrix.tex-version }}
     steps:
       - name: "Checkout GitHub Action"
