--- a/.github/workflows/texlive.yml
+++ b/.github/workflows/texlive.yml
@@ -83,17 +83,33 @@ jobs:
 
   build-image:
     runs-on: ubuntu-latest
+    if: github.event.inputs.build-image == 'true'
     strategy:
       matrix:
-        tex-version: [2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011]
-    if: github.event.inputs.build-image == 'true' && github.event.inputs.tex-version-start <= strategy.matrix.tex-version && github.event.inputs.tex-version-end >= strategy.matrix.tex-version
+        tex-version:
+          [
+            2022,
+            2021,
+            2020,
+            2019,
+            2018,
+            2017,
+            2016,
+            2015,
+            2014,
+            2013,
+            2012,
+            2011,
+          ]
     name: TeXLive ${{ matrix.tex-version }}
     steps:
       - name: "Checkout GitHub Action"
         id: checkout
         uses: actions/checkout@main
+        if: github.event.inputs.tex-version-start <= matrix.tex-version && github.event.inputs.tex-version-end >= matrix.tex-version
 
       - name: "Login to GitHub Container Registry"
+        if: steps.checkout.outcome == 'success'
         id: docker_login
         uses: docker/login-action@v3.0.0
         with:
@@ -102,6 +118,7 @@ jobs:
           password: ${{secrets.GITHUB_TOKEN}}
 
       - name: Build and push Docker image
+        if: steps.docker_login.outcome == 'success'
         id: docker_build
         uses: docker/build-push-action@v5.1.0
         with:
