--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,8 +105,8 @@ services:
       # 记得改/workspaces/overleaf为你的克隆下来的仓库的路径
       SANDBOXED_COMPILES_HOST_DIR: "/workspaces/overleaf/data/sharelatex/data/compiles"
       SYNCTEX_BIN_HOST_PATH: "/workspaces/overleaf/data/sharelatex/bin" 
-      TEX_LIVE_DOCKER_IMAGE: "ghcr.io/ayaka-notes/overleaf/texlive:2023.1"
-      ALL_TEX_LIVE_DOCKER_IMAGES: "ghcr.io/ayaka-notes/overleaf/texlive:2023.1,ghcr.io/ayaka-notes/overleaf/texlive:2022.1"  ###
+      TEX_LIVE_DOCKER_IMAGE: "ghcr.io/ayaka-notes/overleaf/texlive:2023"
+      ALL_TEX_LIVE_DOCKER_IMAGES: "ghcr.io/ayaka-notes/overleaf/texlive:2023,ghcr.io/ayaka-notes/overleaf/texlive:2022,ghcr.io/ayaka-notes/overleaf/texlive:2021"
 
   mongo:
     restart: always
