--- a/.github/workflows/texlive.yml
+++ b/.github/workflows/texlive.yml
@@ -28,6 +28,13 @@ on:
           - 2019
           - 2018
           - 2017
+          - 2016
+          - 2015
+          - 2014
+          - 2013
+          - 2012
+          - 2011
+          - 2010
       # 构建历史镜像的结束版本
       tex-version-end:
         description: "Build End version"
@@ -41,6 +48,13 @@ on:
           - 2019
           - 2018
           - 2017
+          - 2016
+          - 2015
+          - 2014
+          - 2013
+          - 2012
+          - 2011
+          - 2010
 
 env:
   DOCKER_REGISTRY: ghcr.io
@@ -78,7 +92,7 @@ jobs:
       fail-fast: false
       max-parallel: 3
       matrix:
-        tex-version: [2022, 2021, 2020, 2019, 2018, 2017]
+        tex-version: [2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011, 2010]
     name: TeXLive ${{ matrix.tex-version }}
     steps:
       - name: "Checkout GitHub Action"
