Update Dockerfile and workflow to support different versions of TexLive

--- a/texlive/Dockerfile.old
+++ b/texlive/Dockerfile.old
@@ -12,7 +12,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     gnupg gnuplot perl-modules perl ca-certificates
 
 # 参数-年份
-ARG TEXLIVE_Version=2016
+ARG TEXLIVE_Version=2014
 
 # 这里必须用http或者ftp，因为https在perl中会被认为不匹配
 ARG TEXLIVE_MIRROR=http://ftp.math.utah.edu/pub/tex/historic/systems/texlive/${TEXLIVE_Version}/tlnet-final
@@ -25,10 +25,6 @@ RUN mkdir /install-tl-unx \
 &&  gpg --import texlive.asc \
 &&  rm texlive.asc \
 &&  wget --quiet ${TEXLIVE_MIRROR}/install-tl-unx.tar.gz \
-&&  wget --quiet ${TEXLIVE_MIRROR}/install-tl-unx.tar.gz.sha512 \
-&&  wget --quiet ${TEXLIVE_MIRROR}/install-tl-unx.tar.gz.sha512.asc \
-&&  gpg --verify install-tl-unx.tar.gz.sha512.asc \
-&&  sha512sum -c install-tl-unx.tar.gz.sha512 \
 &&  tar -xz -C /install-tl-unx --strip-components=1 -f install-tl-unx.tar.gz \
 &&  rm install-tl-unx.tar.gz* \
 &&  echo "tlpdbopt_autobackup 0" >> /install-tl-unx/texlive.profile \
@@ -40,14 +36,14 @@ RUN mkdir /install-tl-unx \
       -profile /install-tl-unx/texlive.profile \
       -repository ${TEXLIVE_MIRROR} \
     \
-&&  $(find /usr/local/texlive -name tlmgr) path add \
-&&  tlmgr path add \
 &&  rm -rf /install-tl-unx
+# &&  $(find /usr/local/texlive -name tlmgr) path add \
+# &&  tlmgr path add \
 
 # 配置 /usr/local/texlive/${TEXLIVE_Version}/texmf.cnf, 使得LaTeX可以使用shell-escape
-# RUN echo "shell_escape = t" >> /usr/local/texlive/${TEXLIVE_Version}/texmf.cnf && \
-#     echo "openout_any = a" >> /usr/local/texlive/${TEXLIVE_Version}/texmf.cnf && \
-#     echo "openin_any = a" >> /usr/local/texlive/${TEXLIVE_Version}/texmf.cnf
+RUN echo "shell_escape = t" >> /usr/local/texlive/${TEXLIVE_Version}/texmf.cnf && \
+    echo "openout_any = a" >> /usr/local/texlive/${TEXLIVE_Version}/texmf.cnf && \
+    echo "openin_any = a" >> /usr/local/texlive/${TEXLIVE_Version}/texmf.cnf
 
 # 设置环境变量
 ENV PATH="/usr/local/texlive/${TEXLIVE_Version}/bin/x86_64-linux:${PATH}"
