--- a/.github/workflows/texlive.yml
+++ b/.github/workflows/texlive.yml
@@ -108,14 +108,30 @@ jobs:
           registry: ${{env.DOCKER_REGISTRY}}
           username: ${{github.actor}}
           password: ${{secrets.GITHUB_TOKEN}}
-
+      
+      # 只有 2017 版本及以上才能构建
       - name: Build and push Docker image
-        if: steps.docker_login.outcome == 'success'
-        id: docker_build
+        if: steps.docker_login.outcome == 'success' && matrix.tex-version >= 2017
+        id: docker_build_2017_later
         uses: docker/build-push-action@v5.1.0
         with:
           context: ./texlive
           file: ./texlive/Dockerfile
+          push: true
+          tags: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.tex-version }}
+          #   参数
+          build-args: |
+            TEXLIVE_Version=${{ matrix.tex-version }}
+            TEXLIVE_MIRROR=http://ftp.math.utah.edu/pub/tex/historic/systems/texlive/${{ matrix.tex-version }}/tlnet-final
+      
+      # 2017 版本以下的镜像构建
+      - name: Build and push Docker image
+        if: steps.docker_login.outcome == 'success' && matrix.tex-version < 2017
+        id: docker_build_2016_before
+        uses: docker/build-push-action@v5.1.0
+        with:
+          context: ./texlive
+          file: ./texlive/Dockerfile.old
           push: true
           tags: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ matrix.tex-version }}
           #   参数
