--- a/.github/workflows/overleaf.yml
+++ b/.github/workflows/overleaf.yml
@@ -26,6 +26,8 @@ jobs:
           cd ./overleaf && ./run.sh && cd ..
           cp ./patches/unlock-50M-limit/* ./overleaf
           cd ./overleaf && ./run.sh && cd ..
+          cp ./patches/nginx-learn-config/* ./overleaf
+          cd ./overleaf && ./run.sh && cd ..
       - name: "Make CE Docker Image"
         run: |
           cd ./overleaf/server-ce && make
