--- a/.github/workflows/texlive.yml
+++ b/.github/workflows/texlive.yml
@@ -75,12 +75,13 @@ jobs:
         uses: pcasteran/ghcr-cleaning-action@v1.4.0
         with:
           password: ${{ secrets.GITHUB_TOKEN }}
-          repository: ayaka-notes/overleaf/texlive
+          repository: ayaka-notes/overleaf
           package: overleaf/texlive
           dry-run: true
 
   build-image:
     runs-on: ubuntu-latest
+    needs: clean-ghcr-texlive
     if: github.event.inputs.build-image == 'true'
     strategy:
       fail-fast: false
@@ -152,7 +153,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.inputs.build-latest == 'true'
     # 最新的版本构建，等上面的构建完成后再构建，这样就会出现在仓库的最上面
-    needs: build-image 
+    needs: clean-ghcr-texlive
     name: TeXLive latest
     steps:
       - name: "Checkout GitHub Action"
