--- a/.github/workflows/texlive.yml
+++ b/.github/workflows/texlive.yml
@@ -75,7 +75,7 @@ jobs:
         uses: pcasteran/ghcr-cleaning-action@v1.4.0
         with:
           password: ${{ secrets.ORGTOKEN }}
-          package: overleaf/texlive
+          package: overleaf%2Ftexlive
           dry-run: true
 
   build-image:
@@ -183,5 +183,5 @@ jobs:
         uses: pcasteran/ghcr-cleaning-action@v1.4.0
         with:
           password: ${{ secrets.GITHUB_TOKEN }}
-          package: overleaf/texlive
+          package: overleaf%2Ftexlive
           dry-run: true
